# torch

./: .clang-format  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  a.out  blend.c  blend.h  debug_log  demo.c  draw.c  entity.c  entity.h  floor.c  floor.h  main_win.c  makefile  map  player.c  tags  torch.c  torch.h  typescript
core/: Cargo.toml
core/src/: color.rs  frontend.rs  lib.rs  shadow.rs
core/src/frontend/: buffer.rs  flicker.rs
lib/: list.h
lib/termkey/: driver-csi.c  driver-ti.c
src/: ai.rs  camera.rs  color.c  combat.c  commands.rs  demo.c  draw.c  entity.c  floor.c  generate.rs  grid.bk  grid.rs  input.c  main.rs  main_win.c  player.c  random.c  ray_cast.rs  raycast.c  static_flyweight.rs  torch.c  torch.h  ui.h  ui.rs  world.c  world.rs
src/generate/: caves.rs
src/ui/: buffer.rs  gui.rs  mod.rs  term.c  tui.rs  ui.rs
src/world/: camera.rs  entity.rs  generator.rs  inventory.rs  light.rs  point.rs  position.rs  region.rs  tile.rs
src/world/region/: cave.rs
