[package]
name = "torch"
version = "0.1.0"
authors = ["Shunyao Liang"]
edition = "2018"

[workspace]
members = ["core"]

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
crossterm = "0.17"
num-rational = { version = "0.3", default-features = false, features = ['std'] }
num-traits = "0.2"
petgraph = "0.5"
rand = "0.7"
slotmap = "0.4.0"
thiserror = "1.0"

[dependencies.torch-core]
path = "core"
